                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 11-03-2006 fixed: [ 1435914 ] "Set lock" bug
 - 11-03-2006 added: Debug logging to xbmsp file opening.
 - 11-03-2006 fixed: [ 1394481 ] DVD Player - LCD Output.
 - 11-03-2006 fixed: Infinite loop if a media window is activated with a path that does not exist.
 - 11-03-2006 fixed: Text positioning could be up to 1 pixel out.
 - 11-03-2006 fixed: <origin>'s weren't being scaled for different resolutions.
 - 11-03-2006 added: GetThumb button to Movie information dialog to redownload the thumb (overwrites any existing)
 - 10-03-2006 changed: decoupled video playback from master clock in dvdplayer to allow for nicer transition when timestamps in dvd wrap back
 - 10-03-2006 fixed: CUE sheet path name resolving (and other path name resolving) was broken on remote shares.
 - 10-03-2006 changed: music nav, restored track naming template for songs sorted by track num
 - 10-03-2006 fixed: last selected cue item in directory is not remembered
 - 10-03-2006 fixed: items of the music playlist are reset to file when the content of the playlist changes
 - 10-03-2006 fixed: movies where not stacked when adding a folder to the playlist
 - 10-03-2006 fixed: cue items where not filtered when adding a folder to the playlist
 - 10-03-2006 fixed: Crash bug in some skins introduced by fix for first few thumbs.
 - 10-03-2006 added: Enabled the Resume button in dialog video info.
 - 10-03-2006 changed: <imagepath> or <info> in a multiimage control can now point to a single image file (doesn't have to be a folder of files).